about section picture added, witrh portrait of owners, almost fully responsive, solving the issue navbar overlaps the main content on the aboutUS seems to be and issue with heights in  the css

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@ html, body {
   overflow-x: hidden; /* Prevent horizontal scroll */
   font-family: "Roboto Flex", sans-serif;
 }
-
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+ }
  h1 {
   font-weight: 400;
   color: white;
@@ -16,9 +20,10 @@ html, body {
   font-weight: 200;
   line-height: 1.6;
   letter-spacing: 1px;
-  font-size: 18px;
+  font-size: 14px;
   color: white;
  }
+
 @media (prefers-reduced-motion: no-preference) {
 
 }
