--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -1,11 +1,20 @@
+:root {
+    --navbar-height: 60px; /* Set this to the height of your navbar */
+    --footer-height: 50px; /* Set this to the height of your footer */
+  }
 .about-us-section {
     background: url('/src/images/aboutUsImage.webp') no-repeat center center; 
     background-size: cover;
     position: relative;
     z-index: 1;
-    min-height: 100vh;
     display: flex;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    overflow-y: auto;
+    padding-top: var(--navbar-height); 
+    padding-bottom: var(--footer-height);
+    height: 100vh;
 }
 
 .about-us-section::before{
@@ -17,38 +26,71 @@
     left: 0;
     background: rgba(0,0,0,0.8);
     z-index: -1;
+  
+}
+.about-us-container {
+    max-width: 1300px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+.about-us-image-container {
+   width: 100%;
+   height: 100%; 
 }
 
+.about-us-image {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 8px;
+}
 .about-us-content {
     z-index: 2;
-    padding: 100px;
-    border-radius: 8px;
-    max-width: 80%;
-   
+    width: 100%;
+    max-width: 800px;
+    box-sizing: border-box;
 }
 
 .about-us-content h1 {
     margin-bottom: 0.5em;
-    
-  }
+}
 
 .about-us-content p {
    max-width: 600px;
-   
    z-index: 2;
 }
+
+
+
 @media (max-width: 768px) {
     .about-us-section {
-        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        overflow-y: auto;
+        padding-top: var(--navbar-height); 
+        padding-bottom: var(--footer-height);
+    }
+  
+    .about-us-container {
+        padding: 0 15px;
+       
     }
     
+    .about-us-image {
+        width: 100%;
+        height: 400px;
+        object-fit:contain;
+        border-radius: 8px;
+    }
     .about-us-content p {
         max-width: 95%;
-        z-index: 2;
-        font-size: 16px;
+       font-size: 13px;
     }
     .about-us-content {
-        padding: 10px;
+        padding: 5px;
       
     }
 }
+
