--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:flex-start;
+    align-items:center;
 }
 
 .hero-section::before{
